--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts",
+    ".next/types/**/*.tsx",
     "app/lib/placeholder-data.js",
     "scripts/seed.js"
   ],
